# Copyright Siemens Corporate Research Inc. 2007
# Author Sylvain Jaume <sylvain.jaume@siemens.com>

project(vtk)

#--------------------------------------------------------------------
# Define the header files
#
set(HEADERS
  SoVtkActor.h
  SoVtkActor2D.h
  SoVtkAssembly.h
  SoVtkConvertXipImageToVtkAlgorithmOutput.h
  SoVtkImageActor.h
  SoVtkImageViewer2.h
  SoVtkLODActor.h
  SoVtkMatrix4x4.h
  SoVtkPolyData.h
  SoVtkRenderer.h
  SoVtkUtils.h
  SoVtkVolume.h
  generated/SoVtk3DSImporter.h
  generated/SoVtkAVSucdReader.h
  generated/SoVtkAppendFilter.h
  generated/SoVtkAppendPolyData.h
  generated/SoVtkArcPlotter.h
  generated/SoVtkArrayCalculator.h
  generated/SoVtkArrowSource.h
  generated/SoVtkAssignAttribute.h
  generated/SoVtkAttributeDataToFieldDataFilter.h
  generated/SoVtkAttributesErrorMetric.h
  generated/SoVtkAxes.h
  generated/SoVtkBMPReader.h
  generated/SoVtkBMPWriter.h
  generated/SoVtkBSPCuts.h
  generated/SoVtkBYUReader.h
  generated/SoVtkBYUWriter.h
  generated/SoVtkBandedPolyDataContourFilter.h
  generated/SoVtkBitArray.h
  generated/SoVtkBlankStructuredGrid.h
  generated/SoVtkBlankStructuredGridWithImage.h
  generated/SoVtkBooleanTexture.h
  generated/SoVtkBox.h
  generated/SoVtkBoxClipDataSet.h
  generated/SoVtkBranchExtentTranslator.h
  generated/SoVtkBrownianPoints.h
  generated/SoVtkButterflySubdivisionFilter.h
  generated/SoVtkCGMWriter.h
  generated/SoVtkCardinalSpline.h
  generated/SoVtkCastToConcrete.h
  generated/SoVtkCellArray.h
  generated/SoVtkCellCenterDepthSort.h
  generated/SoVtkCellCenters.h
  generated/SoVtkCellData.h
  generated/SoVtkCellDataToPointData.h
  generated/SoVtkCellDerivatives.h
  generated/SoVtkCellLocator.h
  generated/SoVtkChacoReader.h
  generated/SoVtkCharArray.h
  generated/SoVtkCleanPolyData.h
  generated/SoVtkClipDataSet.h
  generated/SoVtkClipPolyData.h
  generated/SoVtkClipVolume.h
  generated/SoVtkCollectPolyData.h
  generated/SoVtkColorTransferFunction.h
  generated/SoVtkCone.h
  generated/SoVtkConeSource.h
  generated/SoVtkConnectivityFilter.h
  generated/SoVtkContourFilter.h
  generated/SoVtkContourGrid.h
  generated/SoVtkCoordinate.h
  generated/SoVtkCubeSource.h
  generated/SoVtkCursor3D.h
  generated/SoVtkCurvatures.h
  generated/SoVtkCutMaterial.h
  generated/SoVtkCutter.h
  generated/SoVtkCylinder.h
  generated/SoVtkCylinderSource.h
  generated/SoVtkCylindricalTransform.h
  generated/SoVtkDEMReader.h
  generated/SoVtkDICOMImageReader.h
  generated/SoVtkDashedStreamLine.h
  generated/SoVtkDataArrayCollectionIterator.h
  generated/SoVtkDataObject.h
  generated/SoVtkDataObjectAlgorithm.h
  generated/SoVtkDataObjectReader.h
  generated/SoVtkDataObjectToDataSetFilter.h
  generated/SoVtkDataObjectWriter.h
  generated/SoVtkDataReader.h
  generated/SoVtkDataSetAlgorithm.h
  generated/SoVtkDataSetAttributes.h
  generated/SoVtkDataSetMapper.h
  generated/SoVtkDataSetReader.h
  generated/SoVtkDataSetSurfaceFilter.h
  generated/SoVtkDataSetToDataObjectFilter.h
  generated/SoVtkDataSetTriangleFilter.h
  generated/SoVtkDataSetWriter.h
  generated/SoVtkDataWriter.h
  generated/SoVtkDecimatePro.h
  generated/SoVtkDelaunay2D.h
  generated/SoVtkDelaunay3D.h
  generated/SoVtkDepthSortPolyData.h
  generated/SoVtkDiscreteMarchingCubes.h
  generated/SoVtkDiskSource.h
  generated/SoVtkDistributedDataFilter.h
  generated/SoVtkDistributedStreamTracer.h
  generated/SoVtkDoubleArray.h
  generated/SoVtkDuplicatePolyData.h
  generated/SoVtkEarthSource.h
  generated/SoVtkEdgePoints.h
  generated/SoVtkElevationFilter.h
  generated/SoVtkEllipticalButtonSource.h
  generated/SoVtkEnSight6BinaryReader.h
  generated/SoVtkEnSight6Reader.h
  generated/SoVtkEnSightGoldBinaryReader.h
  generated/SoVtkEnSightGoldReader.h
  generated/SoVtkEnSightMasterServerReader.h
  generated/SoVtkEnSightWriter.h
  generated/SoVtkExodusIIWriter.h
  generated/SoVtkExodusReader.h
  generated/SoVtkExtentTranslator.h
  generated/SoVtkExtractCTHPart.h
  generated/SoVtkExtractCells.h
  generated/SoVtkExtractDataOverTime.h
  generated/SoVtkExtractEdges.h
  generated/SoVtkExtractGeometry.h
  generated/SoVtkExtractGrid.h
  generated/SoVtkExtractPolyDataGeometry.h
  generated/SoVtkExtractPolyDataPiece.h
  generated/SoVtkExtractRectilinearGrid.h
  generated/SoVtkExtractTensorComponents.h
  generated/SoVtkExtractUnstructuredGrid.h
  generated/SoVtkExtractUnstructuredGridPiece.h
  generated/SoVtkExtractUserDefinedPiece.h
  generated/SoVtkExtractVOI.h
  generated/SoVtkExtractVectorComponents.h
  generated/SoVtkFacetReader.h
  generated/SoVtkFacetWriter.h
  generated/SoVtkFeatureEdges.h
  generated/SoVtkFieldData.h
  generated/SoVtkFieldDataToAttributeDataFilter.h
  generated/SoVtkFiniteDifferenceGradientEstimator.h
  generated/SoVtkFixedPointRayCastImage.h
  generated/SoVtkFixedPointVolumeRayCastMapper.h
  generated/SoVtkFloatArray.h
  generated/SoVtkGAMBITReader.h
  generated/SoVtkGESignaReader.h
  generated/SoVtkGaussianCubeReader.h
  generated/SoVtkGaussianSplatter.h
  generated/SoVtkGeneralTransform.h
  generated/SoVtkGenericClip.h
  generated/SoVtkGenericContourFilter.h
  generated/SoVtkGenericCutter.h
  generated/SoVtkGenericDataSetTessellator.h
  generated/SoVtkGenericEnSightReader.h
  generated/SoVtkGenericGeometryFilter.h
  generated/SoVtkGenericGlyph3DFilter.h
  generated/SoVtkGenericInterpolatedVelocityField.h
  generated/SoVtkGenericOutlineFilter.h
  generated/SoVtkGenericProbeFilter.h
  generated/SoVtkGenericStreamTracer.h
  generated/SoVtkGeometricErrorMetric.h
  generated/SoVtkGeometryFilter.h
  generated/SoVtkGlyph2D.h
  generated/SoVtkGlyph3D.h
  generated/SoVtkGlyphSource2D.h
  generated/SoVtkGraphLayoutFilter.h
  generated/SoVtkGreedyTerrainDecimation.h
  generated/SoVtkGridSynchronizedTemplates3D.h
  generated/SoVtkGridTransform.h
  generated/SoVtkHedgeHog.h
  generated/SoVtkHull.h
  generated/SoVtkHyperStreamline.h
  generated/SoVtkIdFilter.h
  generated/SoVtkIdTypeArray.h
  generated/SoVtkIdentityTransform.h
  generated/SoVtkImageAccumulate.h
  generated/SoVtkImageAnisotropicDiffusion2D.h
  generated/SoVtkImageAnisotropicDiffusion3D.h
  generated/SoVtkImageAppend.h
  generated/SoVtkImageAppendComponents.h
  generated/SoVtkImageBlend.h
  generated/SoVtkImageButterworthHighPass.h
  generated/SoVtkImageButterworthLowPass.h
  generated/SoVtkImageCacheFilter.h
  generated/SoVtkImageCanvasSource2D.h
  generated/SoVtkImageCast.h
  generated/SoVtkImageChangeInformation.h
  generated/SoVtkImageCheckerboard.h
  generated/SoVtkImageCityBlockDistance.h
  generated/SoVtkImageClip.h
  generated/SoVtkImageConstantPad.h
  generated/SoVtkImageContinuousDilate3D.h
  generated/SoVtkImageContinuousErode3D.h
  generated/SoVtkImageConvolve.h
  generated/SoVtkImageCorrelation.h
  generated/SoVtkImageCursor3D.h
  generated/SoVtkImageData.h
  generated/SoVtkImageDataGeometryFilter.h
  generated/SoVtkImageDataStreamer.h
  generated/SoVtkImageDifference.h
  generated/SoVtkImageDilateErode3D.h
  generated/SoVtkImageDivergence.h
  generated/SoVtkImageDotProduct.h
  generated/SoVtkImageEllipsoidSource.h
  generated/SoVtkImageEuclideanDistance.h
  generated/SoVtkImageEuclideanToPolar.h
  generated/SoVtkImageExport.h
  generated/SoVtkImageExtractComponents.h
  generated/SoVtkImageFFT.h
  generated/SoVtkImageFlip.h
  generated/SoVtkImageFourierCenter.h
  generated/SoVtkImageGaussianSmooth.h
  generated/SoVtkImageGaussianSource.h
  generated/SoVtkImageGradient.h
  generated/SoVtkImageGradientMagnitude.h
  generated/SoVtkImageGridSource.h
  generated/SoVtkImageHSIToRGB.h
  generated/SoVtkImageHSVToRGB.h
  generated/SoVtkImageHybridMedian2D.h
  generated/SoVtkImageIdealHighPass.h
  generated/SoVtkImageIdealLowPass.h
  generated/SoVtkImageImport.h
  generated/SoVtkImageIslandRemoval2D.h
  generated/SoVtkImageLaplacian.h
  generated/SoVtkImageLogarithmicScale.h
  generated/SoVtkImageLogic.h
  generated/SoVtkImageLuminance.h
  generated/SoVtkImageMagnify.h
  generated/SoVtkImageMagnitude.h
  generated/SoVtkImageMandelbrotSource.h
  generated/SoVtkImageMapToColors.h
  generated/SoVtkImageMapToRGBA.h
  generated/SoVtkImageMapToWindowLevelColors.h
  generated/SoVtkImageMapper.h
  generated/SoVtkImageMarchingCubes.h
  generated/SoVtkImageMask.h
  generated/SoVtkImageMaskBits.h
  generated/SoVtkImageMathematics.h
  generated/SoVtkImageMedian3D.h
  generated/SoVtkImageMirrorPad.h
  generated/SoVtkImageNoiseSource.h
  generated/SoVtkImageNonMaximumSuppression.h
  generated/SoVtkImageNormalize.h
  generated/SoVtkImageOpenClose3D.h
  generated/SoVtkImagePadFilter.h
  generated/SoVtkImagePermute.h
  generated/SoVtkImageQuantizeRGBToIndex.h
  generated/SoVtkImageRFFT.h
  generated/SoVtkImageRGBToHSI.h
  generated/SoVtkImageRGBToHSV.h
  generated/SoVtkImageRange3D.h
  generated/SoVtkImageReader.h
  generated/SoVtkImageReader2.h
  generated/SoVtkImageRectilinearWipe.h
  generated/SoVtkImageResample.h
  generated/SoVtkImageReslice.h
  generated/SoVtkImageSeedConnectivity.h
  generated/SoVtkImageSeparableConvolution.h
  generated/SoVtkImageShiftScale.h
  generated/SoVtkImageShrink3D.h
  generated/SoVtkImageSinusoidSource.h
  generated/SoVtkImageSkeleton2D.h
  generated/SoVtkImageSobel2D.h
  generated/SoVtkImageSobel3D.h
  generated/SoVtkImageSpatialAlgorithm.h
  generated/SoVtkImageSpatialFilter.h
  generated/SoVtkImageStencil.h
  generated/SoVtkImageStencilData.h
  generated/SoVtkImageStencilSource.h
  generated/SoVtkImageThreshold.h
  generated/SoVtkImageToImageStencil.h
  generated/SoVtkImageToPolyDataFilter.h
  generated/SoVtkImageToStructuredPoints.h
  generated/SoVtkImageTranslateExtent.h
  generated/SoVtkImageVariance3D.h
  generated/SoVtkImageWrapPad.h
  generated/SoVtkImageWriter.h
  generated/SoVtkImplicitBoolean.h
  generated/SoVtkImplicitDataSet.h
  generated/SoVtkImplicitFunctionToImageStencil.h
  generated/SoVtkImplicitModeller.h
  generated/SoVtkImplicitSelectionLoop.h
  generated/SoVtkImplicitSum.h
  generated/SoVtkImplicitTextureCoords.h
  generated/SoVtkImplicitVolume.h
  generated/SoVtkImplicitWindowFunction.h
  generated/SoVtkInformation.h
  generated/SoVtkLookupTable.h
  generated/SoVtkOutlineFilter.h
  generated/SoVtkPLOT3DReader.h
  generated/SoVtkPiecewiseFunction.h
  generated/SoVtkPlane.h
  generated/SoVtkPolyDataMapper.h
  generated/SoVtkPolyDataNormals.h
  generated/SoVtkProperty.h
  generated/SoVtkRungeKutta4.h
  generated/SoVtkSphereSource.h
  generated/SoVtkStreamLine.h
  generated/SoVtkStripper.h
  generated/SoVtkStructuredGridGeometryFilter.h
  generated/SoVtkStructuredGridOutlineFilter.h
  generated/SoVtkStructuredGridReader.h
  generated/SoVtkStructuredPointsReader.h
  generated/SoVtkTransform.h
  generated/SoVtkTriangleFilter.h
  generated/SoVtkTubeFilter.h
  generated/SoVtkVolume16Reader.h
  generated/SoVtkVolumeProperty.h
  generated/SoVtkVolumeRayCastCompositeFunction.h
  generated/SoVtkVolumeRayCastIsosurfaceFunction.h
  generated/SoVtkVolumeRayCastMIPFunction.h
  generated/SoVtkVolumeRayCastMapper.h
  generated/SoVtkVolumeTextureMapper2D.h)
 
#--------------------------------------------------------------------
# Define the source files
#
set(SOURCES
  SoSFVtkAlgorithmOutput.cpp
  SoSFVtkObject.cpp
  SoVtkActor.cpp
  SoVtkActor2D.cpp
  SoVtkAlgorithmOutput.cpp
  SoVtkAssembly.cpp
  SoVtkConvertXipImageToVtkAlgorithmOutput.cpp
  SoVtkImageActor.cpp
  SoVtkImageViewer2.cpp
  SoVtkLODActor.cpp
  SoVtkMatrix4x4.cpp
  SoVtkObject.cpp
  SoVtkPolyData.cpp
  SoVtkRenderer.cpp
  SoVtkVolume.cpp
  xipivvtk.cpp
  generated/SoVtk3DSImporter.cpp
  generated/SoVtkAVSucdReader.cpp
  generated/SoVtkAppendFilter.cpp
  generated/SoVtkAppendPolyData.cpp
  generated/SoVtkArcPlotter.cpp
  generated/SoVtkArrayCalculator.cpp
  generated/SoVtkArrowSource.cpp
  generated/SoVtkAssignAttribute.cpp
  generated/SoVtkAttributeDataToFieldDataFilter.cpp
  generated/SoVtkAttributesErrorMetric.cpp
  generated/SoVtkAxes.cpp
  generated/SoVtkBMPReader.cpp
  generated/SoVtkBMPWriter.cpp
  generated/SoVtkBSPCuts.cpp
  generated/SoVtkBYUReader.cpp
  generated/SoVtkBYUWriter.cpp
  generated/SoVtkBandedPolyDataContourFilter.cpp
  generated/SoVtkBitArray.cpp
  generated/SoVtkBlankStructuredGrid.cpp
  generated/SoVtkBlankStructuredGridWithImage.cpp
  generated/SoVtkBooleanTexture.cpp
  generated/SoVtkBox.cpp
  generated/SoVtkBoxClipDataSet.cpp
  generated/SoVtkBranchExtentTranslator.cpp
  generated/SoVtkBrownianPoints.cpp
  generated/SoVtkButterflySubdivisionFilter.cpp
  generated/SoVtkCGMWriter.cpp
  generated/SoVtkCardinalSpline.cpp
  generated/SoVtkCastToConcrete.cpp
  generated/SoVtkCellArray.cpp
  generated/SoVtkCellCenterDepthSort.cpp
  generated/SoVtkCellCenters.cpp
  generated/SoVtkCellData.cpp
  generated/SoVtkCellDataToPointData.cpp
  generated/SoVtkCellDerivatives.cpp
  generated/SoVtkCellLocator.cpp
  generated/SoVtkChacoReader.cpp
  generated/SoVtkCharArray.cpp
  generated/SoVtkCleanPolyData.cpp
  generated/SoVtkClipDataSet.cpp
  generated/SoVtkClipPolyData.cpp
  generated/SoVtkClipVolume.cpp
  generated/SoVtkCollectPolyData.cpp
  generated/SoVtkColorTransferFunction.cpp
  generated/SoVtkCone.cpp
  generated/SoVtkConeSource.cpp
  generated/SoVtkConnectivityFilter.cpp
  generated/SoVtkContourFilter.cpp
  generated/SoVtkContourGrid.cpp
  generated/SoVtkCoordinate.cpp
  generated/SoVtkCubeSource.cpp
  generated/SoVtkCursor3D.cpp
  generated/SoVtkCurvatures.cpp
  generated/SoVtkCutMaterial.cpp
  generated/SoVtkCutter.cpp
  generated/SoVtkCylinder.cpp
  generated/SoVtkCylinderSource.cpp
  generated/SoVtkCylindricalTransform.cpp
  generated/SoVtkDEMReader.cpp
  generated/SoVtkDICOMImageReader.cpp
  generated/SoVtkDashedStreamLine.cpp
  generated/SoVtkDataArrayCollectionIterator.cpp
  generated/SoVtkDataObject.cpp
  generated/SoVtkDataObjectAlgorithm.cpp
  generated/SoVtkDataObjectReader.cpp
  generated/SoVtkDataObjectToDataSetFilter.cpp
  generated/SoVtkDataObjectWriter.cpp
  generated/SoVtkDataReader.cpp
  generated/SoVtkDataSetAlgorithm.cpp
  generated/SoVtkDataSetAttributes.cpp
  generated/SoVtkDataSetMapper.cpp
  generated/SoVtkDataSetReader.cpp
  generated/SoVtkDataSetSurfaceFilter.cpp
  generated/SoVtkDataSetToDataObjectFilter.cpp
  generated/SoVtkDataSetTriangleFilter.cpp
  generated/SoVtkDataSetWriter.cpp
  generated/SoVtkDataWriter.cpp
  generated/SoVtkDecimatePro.cpp
  generated/SoVtkDelaunay2D.cpp
  generated/SoVtkDelaunay3D.cpp
  generated/SoVtkDepthSortPolyData.cpp
  generated/SoVtkDiscreteMarchingCubes.cpp
  generated/SoVtkDiskSource.cpp
  generated/SoVtkDistributedDataFilter.cpp
  generated/SoVtkDistributedStreamTracer.cpp
  generated/SoVtkDoubleArray.cpp
  generated/SoVtkDuplicatePolyData.cpp
  generated/SoVtkEarthSource.cpp
  generated/SoVtkEdgePoints.cpp
  generated/SoVtkElevationFilter.cpp
  generated/SoVtkEllipticalButtonSource.cpp
  generated/SoVtkEnSight6BinaryReader.cpp
  generated/SoVtkEnSight6Reader.cpp
  generated/SoVtkEnSightGoldBinaryReader.cpp
  generated/SoVtkEnSightGoldReader.cpp
  generated/SoVtkEnSightMasterServerReader.cpp
  generated/SoVtkEnSightWriter.cpp
  generated/SoVtkExodusIIWriter.cpp
  generated/SoVtkExodusReader.cpp
  generated/SoVtkExtentTranslator.cpp
  generated/SoVtkExtractCTHPart.cpp
  generated/SoVtkExtractCells.cpp
  generated/SoVtkExtractDataOverTime.cpp
  generated/SoVtkExtractEdges.cpp
  generated/SoVtkExtractGeometry.cpp
  generated/SoVtkExtractGrid.cpp
  generated/SoVtkExtractPolyDataGeometry.cpp
  generated/SoVtkExtractPolyDataPiece.cpp
  generated/SoVtkExtractRectilinearGrid.cpp
  generated/SoVtkExtractTensorComponents.cpp
  generated/SoVtkExtractUnstructuredGrid.cpp
  generated/SoVtkExtractUnstructuredGridPiece.cpp
  generated/SoVtkExtractUserDefinedPiece.cpp
  generated/SoVtkExtractVOI.cpp
  generated/SoVtkExtractVectorComponents.cpp
  generated/SoVtkFacetReader.cpp
  generated/SoVtkFacetWriter.cpp
  generated/SoVtkFeatureEdges.cpp
  generated/SoVtkFieldData.cpp
  generated/SoVtkFieldDataToAttributeDataFilter.cpp
  generated/SoVtkFiniteDifferenceGradientEstimator.cpp
  generated/SoVtkFixedPointRayCastImage.cpp
  generated/SoVtkFixedPointVolumeRayCastMapper.cpp
  generated/SoVtkFloatArray.cpp
  generated/SoVtkGAMBITReader.cpp
  generated/SoVtkGESignaReader.cpp
  generated/SoVtkGaussianCubeReader.cpp
  generated/SoVtkGaussianSplatter.cpp
  generated/SoVtkGeneralTransform.cpp
  generated/SoVtkGenericClip.cpp
  generated/SoVtkGenericContourFilter.cpp
  generated/SoVtkGenericCutter.cpp
  generated/SoVtkGenericDataSetTessellator.cpp
  generated/SoVtkGenericEnSightReader.cpp
  generated/SoVtkGenericGeometryFilter.cpp
  generated/SoVtkGenericGlyph3DFilter.cpp
  generated/SoVtkGenericInterpolatedVelocityField.cpp
  generated/SoVtkGenericOutlineFilter.cpp
  generated/SoVtkGenericProbeFilter.cpp
  generated/SoVtkGenericStreamTracer.cpp
  generated/SoVtkGeometricErrorMetric.cpp
  generated/SoVtkGeometryFilter.cpp
  generated/SoVtkGlyph2D.cpp
  generated/SoVtkGlyph3D.cpp
  generated/SoVtkGlyphSource2D.cpp
  generated/SoVtkGraphLayoutFilter.cpp
  generated/SoVtkGreedyTerrainDecimation.cpp
  generated/SoVtkGridSynchronizedTemplates3D.cpp
  generated/SoVtkGridTransform.cpp
  generated/SoVtkHedgeHog.cpp
  generated/SoVtkHull.cpp
  generated/SoVtkHyperStreamline.cpp
  generated/SoVtkIdFilter.cpp
  generated/SoVtkIdTypeArray.cpp
  generated/SoVtkIdentityTransform.cpp
  generated/SoVtkImageAccumulate.cpp
  generated/SoVtkImageAnisotropicDiffusion2D.cpp
  generated/SoVtkImageAnisotropicDiffusion3D.cpp
  generated/SoVtkImageAppend.cpp
  generated/SoVtkImageAppendComponents.cpp
  generated/SoVtkImageBlend.cpp
  generated/SoVtkImageButterworthHighPass.cpp
  generated/SoVtkImageButterworthLowPass.cpp
  generated/SoVtkImageCacheFilter.cpp
  generated/SoVtkImageCanvasSource2D.cpp
  generated/SoVtkImageCast.cpp
  generated/SoVtkImageChangeInformation.cpp
  generated/SoVtkImageCheckerboard.cpp
  generated/SoVtkImageCityBlockDistance.cpp
  generated/SoVtkImageClip.cpp
  generated/SoVtkImageConstantPad.cpp
  generated/SoVtkImageContinuousDilate3D.cpp
  generated/SoVtkImageContinuousErode3D.cpp
  generated/SoVtkImageConvolve.cpp
  generated/SoVtkImageCorrelation.cpp
  generated/SoVtkImageCursor3D.cpp
  generated/SoVtkImageData.cpp
  generated/SoVtkImageDataGeometryFilter.cpp
  generated/SoVtkImageDataStreamer.cpp
  generated/SoVtkImageDifference.cpp
  generated/SoVtkImageDilateErode3D.cpp
  generated/SoVtkImageDivergence.cpp
  generated/SoVtkImageDotProduct.cpp
  generated/SoVtkImageEllipsoidSource.cpp
  generated/SoVtkImageEuclideanDistance.cpp
  generated/SoVtkImageEuclideanToPolar.cpp
  generated/SoVtkImageExport.cpp
  generated/SoVtkImageExtractComponents.cpp
  generated/SoVtkImageFFT.cpp
  generated/SoVtkImageFlip.cpp
  generated/SoVtkImageFourierCenter.cpp
  generated/SoVtkImageGaussianSmooth.cpp
  generated/SoVtkImageGaussianSource.cpp
  generated/SoVtkImageGradient.cpp
  generated/SoVtkImageGradientMagnitude.cpp
  generated/SoVtkImageGridSource.cpp
  generated/SoVtkImageHSIToRGB.cpp
  generated/SoVtkImageHSVToRGB.cpp
  generated/SoVtkImageHybridMedian2D.cpp
  generated/SoVtkImageIdealHighPass.cpp
  generated/SoVtkImageIdealLowPass.cpp
  generated/SoVtkImageImport.cpp
  generated/SoVtkImageIslandRemoval2D.cpp
  generated/SoVtkImageLaplacian.cpp
  generated/SoVtkImageLogarithmicScale.cpp
  generated/SoVtkImageLogic.cpp
  generated/SoVtkImageLuminance.cpp
  generated/SoVtkImageMagnify.cpp
  generated/SoVtkImageMagnitude.cpp
  generated/SoVtkImageMandelbrotSource.cpp
  generated/SoVtkImageMapToColors.cpp
  generated/SoVtkImageMapToRGBA.cpp
  generated/SoVtkImageMapToWindowLevelColors.cpp
  generated/SoVtkImageMapper.cpp
  generated/SoVtkImageMarchingCubes.cpp
  generated/SoVtkImageMask.cpp
  generated/SoVtkImageMaskBits.cpp
  generated/SoVtkImageMathematics.cpp
  generated/SoVtkImageMedian3D.cpp
  generated/SoVtkImageMirrorPad.cpp
  generated/SoVtkImageNoiseSource.cpp
  generated/SoVtkImageNonMaximumSuppression.cpp
  generated/SoVtkImageNormalize.cpp
  generated/SoVtkImageOpenClose3D.cpp
  generated/SoVtkImagePadFilter.cpp
  generated/SoVtkImagePermute.cpp
  generated/SoVtkImageQuantizeRGBToIndex.cpp
  generated/SoVtkImageRFFT.cpp
  generated/SoVtkImageRGBToHSI.cpp
  generated/SoVtkImageRGBToHSV.cpp
  generated/SoVtkImageRange3D.cpp
  generated/SoVtkImageReader.cpp
  generated/SoVtkImageReader2.cpp
  generated/SoVtkImageRectilinearWipe.cpp
  generated/SoVtkImageResample.cpp
  generated/SoVtkImageReslice.cpp
  generated/SoVtkImageSeedConnectivity.cpp
  generated/SoVtkImageSeparableConvolution.cpp
  generated/SoVtkImageShiftScale.cpp
  generated/SoVtkImageShrink3D.cpp
  generated/SoVtkImageSinusoidSource.cpp
  generated/SoVtkImageSkeleton2D.cpp
  generated/SoVtkImageSobel2D.cpp
  generated/SoVtkImageSobel3D.cpp
  generated/SoVtkImageSpatialAlgorithm.cpp
  generated/SoVtkImageSpatialFilter.cpp
  generated/SoVtkImageStencil.cpp
  generated/SoVtkImageStencilData.cpp
  generated/SoVtkImageStencilSource.cpp
  generated/SoVtkImageThreshold.cpp
  generated/SoVtkImageToImageStencil.cpp
  generated/SoVtkImageToPolyDataFilter.cpp
  generated/SoVtkImageToStructuredPoints.cpp
  generated/SoVtkImageTranslateExtent.cpp
  generated/SoVtkImageVariance3D.cpp
  generated/SoVtkImageWrapPad.cpp
  generated/SoVtkImageWriter.cpp
  generated/SoVtkImplicitBoolean.cpp
  generated/SoVtkImplicitDataSet.cpp
  generated/SoVtkImplicitFunctionToImageStencil.cpp
  generated/SoVtkImplicitModeller.cpp
  generated/SoVtkImplicitSelectionLoop.cpp
  generated/SoVtkImplicitSum.cpp
  generated/SoVtkImplicitTextureCoords.cpp
  generated/SoVtkImplicitVolume.cpp
  generated/SoVtkImplicitWindowFunction.cpp
  generated/SoVtkInformation.cpp
  generated/SoVtkLookupTable.cpp
  generated/SoVtkOutlineFilter.cpp
  generated/SoVtkPLOT3DReader.cpp
  generated/SoVtkPiecewiseFunction.cpp
  generated/SoVtkPlane.cpp
  generated/SoVtkPolyDataMapper.cpp
  generated/SoVtkPolyDataNormals.cpp
  generated/SoVtkProperty.cpp
  generated/SoVtkRungeKutta4.cpp
  generated/SoVtkSphereSource.cpp
  generated/SoVtkStreamLine.cpp
  generated/SoVtkStripper.cpp
  generated/SoVtkStructuredGridGeometryFilter.cpp
  generated/SoVtkStructuredGridOutlineFilter.cpp
  generated/SoVtkStructuredGridReader.cpp
  generated/SoVtkStructuredPointsReader.cpp
  generated/SoVtkTransform.cpp
  generated/SoVtkTriangleFilter.cpp
  generated/SoVtkTubeFilter.cpp
  generated/SoVtkVolume16Reader.cpp
  generated/SoVtkVolumeProperty.cpp
  generated/SoVtkVolumeRayCastCompositeFunction.cpp
  generated/SoVtkVolumeRayCastIsosurfaceFunction.cpp
  generated/SoVtkVolumeRayCastMIPFunction.cpp
  generated/SoVtkVolumeRayCastMapper.cpp
  generated/SoVtkVolumeTextureMapper2D.cpp)

#--------------------------------------------------------------------
# Define the compiler flags
#
if(WIN32)
  add_definitions(-DXIPIVVTK_EXPORTS)
else(WIN32)
  add_definitions(-DHAVE_CONFIG_H)
endif(WIN32)


#--------------------------------------------------------------------
# moved from the main CMake file
#
find_package(VTK) 
#include(${VTK_USE_FILE})

if(NOT VTK_LIBRARIES)
    set(VTK_LIBRARIES
        vtkCommon
        vtkDICOMParser
        vtkFiltering
        vtkGenericFiltering
        vtkGraphics
        vtkHybrid
        vtkIO
        vtkImaging
        vtkInfovis
        vtkNetCDF
        vtkParallel
        vtkRendering
        vtkViews
        vtkVolumeRendering
        vtkWidgets
        vtkexoIIc
        # vtkexpat # 
        # vtkfreetype # 
        vtkftgl
        # vtkjpeg # 
        # vtklibxml2 # 
        vtkmetaio
        # vtkpng # 
        vtksqlite
        vtksys
        # vtktiff # 
        vtkverdict
        # vtkzlib # 
    )
endif(NOT VTK_LIBRARIES)

#--------------------------------------------------------------------
# Define the include directories
#
include_directories(
  ${PROJECT_SOURCE_DIR}
  ${VTK_INCLUDE_DIRS}
  generated)

#--------------------------------------------------------------------
# Define the link directories
#
link_directories(${VTK_LIBRARY_DIRS})

#--------------------------------------------------------------------
# Compile the library
#
if(BUILD_SHARED_LIBS)
  add_library(xipivvtk SHARED ${HEADERS} ${SOURCES})
else(BUILD_SHARED_LIBS)
  add_library(xipivvtk STATIC ${HEADERS} ${SOURCES})
endif(BUILD_SHARED_LIBS)

set_target_properties(xipivvtk
  PROPERTIES VERSION ${XIP_VERSION_STRING}
  SOVERSION ${XIP_VERSION_STRING})

#--------------------------------------------------------------------
# Link the library
#
target_link_libraries(xipivvtk
  ${XIP_CORE_LIBRARY}
  ${VTK_LIBRARIES})

add_dependencies(xipivvtk xipivcore)

#--------------------------------------------------------------------
# Install the library
#
install(TARGETS xipivvtk
  RUNTIME DESTINATION bin/release CONFIGURATIONS Release
  ARCHIVE DESTINATION lib/release CONFIGURATIONS Release
  LIBRARY DESTINATION lib/release CONFIGURATIONS Release
  BUNDLE  DESTINATION lib/release CONFIGURATIONS Release)

install(TARGETS xipivvtk
  RUNTIME DESTINATION bin/debug   CONFIGURATIONS Debug
  ARCHIVE DESTINATION lib/debug   CONFIGURATIONS Debug
  LIBRARY DESTINATION lib/debug   CONFIGURATIONS Debug
  BUNDLE  DESTINATION lib/debug   CONFIGURATIONS Debug)

if(WIN32)
  install(FILES ${LIBRARY_OUTPUT_PATH}/debug/xipivvtk${CMAKE_DEBUG_POSTFIX}.pdb
    DESTINATION bin/debug CONFIGURATIONS Debug)

endif(WIN32)
